--- a/about page.html
+++ b/about page.html
@@ -1,21 +1,73 @@
 <!DOCTYPE HTML>
 
 <html>
-	<!-- <body bgcolor="#4169E1"> -->
+	<body bgcolor="#0000fe">
 	
 	<head>
 		<title> About True Blue </title> <!-- sets the title on the tab -->
 		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		
+	<style>	
+		table { 
+			color: #333;
+			font-family: Helvetica, Arial, sans-serif;
+			width: 640px; 
+			border-collapse: 
+			collapse; border-spacing: 0; 
+		}
+
+		td, th { 
+			border: 1px solid transparent; /* No more visible border */
+			height: 30px; 
+			transition: all 0.3s;  /* Simple transition for hover effect */
+		}
+
+		th {
+			background: #DFDFDF;  /* Darken header a bit */
+			font-weight: bold;
+		}
+
+		td {
+			background: #FAFAFA;
+			text-align: center;
+		}
+		
+		tr:nth-child(even) td { background: #F1F1F1; }   
+
+		/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */ 
+		tr:nth-child(odd) td { background: #FEFEFE; }  
+
+		tr td:hover { background: #666; color: #FFF; }
+	</style>
+	
 	</head>
 	
 	<body>
-	<h1> About True Blue </h1>
-	<p> True Blue is the student section at all University at Buffalo athletics events and we are the largest student run club on campus. </p><br>
-	<p>2016-2017 E-Board:</p>
-	<p>President - Casey Bunce</p>
-	<p>Vice President - Morgan O'Leary</p>
-	<p>Treasurer - Kyle Hughes</p>
-	<p>Secretary - Steph Wolcott</p>
-	</body>
-	
+	<a href="home page.html">
+		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
+	</a>
+	<h1 style="color:white"> About True Blue </h1>
+	<p style="color:white"> True Blue is the student section at all University at Buffalo athletics events and we are the largest student run club on campus. </p><br>
+
+	<table style="color:white" border="1px">
+		<tr>
+			<th>2016-2017 E-Board:</th>
+		</tr>
+		<tr>
+			<th>President</th>
+			<th>Casey Bunce</th>
+		</tr>
+		<tr>
+			<th>Vice President</th>
+			<th>Morgan O'Leary</th>
+		</tr>
+		<tr>
+			<th>Treasurer</th>
+			<th>Kyle Hughes</th>
+		</tr>
+		<tr>
+			<th>Secretary</th>
+			<th>Steph Wolcott</th>
+		</tr>
+	</body>	
 </html>
