--- a/chant page.html
+++ b/chant page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 
 <html>
-	<!-- <body bgcolor="#4169E1"> -->
+	<body bgcolor="#0000fe">
 	
 	<head>
 		<title> True Blue Chants </title> <!-- sets the title on the tab -->
@@ -9,7 +9,10 @@
 	</head>
 	
 	<body>
-	<h1> Chants </h1>
+	<a href="home page.html">
+		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
+	</a>
+	<h1 style="color:white"> Chants </h1>
 	
 	</body>
 	
