--- a/home page.html
+++ b/home page.html
@@ -1,30 +1,50 @@
 <!DOCTYPE HTML>
 
 <html>
-	<!-- <body bgcolor="#4169E1"> -->
+	<body bgcolor="#0000fe">
 	
 	<head>
 		<title> True Blue </title> <!-- sets the title on the tab -->
 		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		
+		<style>
+			.social {
+				padding-right: 15%;
+			}
+			.twitter{
+				padding-right:15%;
+				padding-left:15%;
+			}
+			.centeredText{
+				text-align:center;
+			}
+		</style>
 	</head>
 	
 	<body>
 	<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue" width="100" height="100">
-	<h1>Welcome to the Official Website of True Blue</h1>
-	<a href="about page.html">About</a>
-	<a href="chant page.html">Chants</a>
-	<p></p>
+	<h1 style="color:white" class="centeredText">Welcome to the Official Website of True Blue</h1>
+	<a style="color:white" href="about page.html">About</a>
+	<a style="color:white" href="chant page.html">Chants</a>
+	<a style="color:white" href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a>
+	
+	<br><br>
+
 	<a href="https://twitter.com/UBTrueBlue">
-		<img src="http://i.imgur.com/LyNLaHG.png" alt="Twitter Icon" width="60" height="50">
+		<img src="http://i.imgur.com/LyNLaHG.png" alt="Twitter Icon" width="60" height="50" class="twitter" padding-left="100">
 	</a>
 	<a href="https://www.instagram.com/ubtrueblue/">
-		<img src="http://i.imgur.com/jYrbVjW.png" alt="Instagram Icon" width="64" height="64">
+		<img src="http://i.imgur.com/jYrbVjW.png" alt="Instagram Icon" width="64" height="64" class="social">
 	</a>
 	<a href="https://www.facebook.com/ubtrueblue/?fref=ts">
-		<img src="http://i.imgur.com/QaFU0Qg.png" alt="Facebook Icon" width="64" height="64">
+		<img src="http://i.imgur.com/QaFU0Qg.png" alt="Facebook Icon" width="64" height="64" class="social">
 	</a>
 	<a href="https://www.snapchat.com/add/ubtrueblue">
-		<img src="http://i.imgur.com/mlosDCS.png" alt="Snapchat Icon" width="64" height="60">
+		<img src="http://i.imgur.com/mlosDCS.png" alt="Snapchat Icon" width="64" height="60" class="social">
 	</a>
+	
+	<br>
+	
+	<button type="button">Continue to Site</button>
 	</body>
 </html>
