Added Nav bar and landing page

--- a/events page.html
+++ b/events page.html
@@ -4,10 +4,10 @@
 	<body bgcolor="#0000fe">
 	
 	<head>
-		<title> True Blue Chants </title> <!-- sets the title on the tab -->
+		<title> Events and Announcements </title> <!-- sets the title on the tab -->
 		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
 		<style>
-					/*NAVIGATION BAR STUFF */
+				/*NAVIGATION BAR STUFF */
 .nav-bar a {
 	color:#0000fe;
 	font-size:1em;
@@ -48,7 +48,7 @@ li {
 	</head>
 	
 	<body>
-	<a href="home page.html">
+	<a href="landing page.html">
 		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
 	</a>
 	<div id="nav-container" class="nav-bar">
@@ -58,8 +58,11 @@ li {
 		<li> <a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a> </li>
 	</div>
 	<br><br>
-	<h1 style="color:white"> Chants </h1>
-	
+	<h1 style="color:white"> Announcements </h1> 
+	<h4 style="color:white">&emsp; -We're volunteering to help new students move in on August 25th! Go to <a href="https://campusliving.buffalo.edu/reslife/class/reg/schedule.aspx?classType=1002&class_guid=480326ea-2e78-4011-bc5e-f5ed757fe984">this</a> link if you're interested in volunteering with us. </h4>
+	<br>
+	<h1 style="color:white"> Events </h1>
+	<iframe src="https://calendar.google.com/calendar/b/1/embed?showPrint=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%233333ff&amp;src=buffalo.edu_5svqr2vv2givdi648f68884nv8@group.calendar.google.com&ctz=America/New_York"
+	style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 	</body>
-	
 </html>
