--- a/home page.html
+++ b/home page.html
@@ -9,42 +9,63 @@
 		
 		<style>
 			.social {
-				padding-right: 15%;
+				padding-right: 11.6%;
 			}
 			.twitter{
-				padding-right:15%;
-				padding-left:15%;
+				padding-right:11.6%;
+				padding-left:11.6%;
 			}
 			.centeredText{
 				text-align:center;
+			}
+			.button {
+				background-color: #0000fe;
+				color: white;
+				padding: 16px 32px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				font-size: 16px;
+				margin: 4px 2px;
+				-webkit-transition-duration: 0.4s; /* Safari */
+				transition-duration: 0.4s;
+				cursor: pointer;
+				border: 2px solid white;
+			}
+			.button:hover {
+				background-color: white;
+				color: #0000fe;
 			}
 		</style>
 	</head>
 	
 	<body>
-	<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue" width="100" height="100">
-	<h1 style="color:white" class="centeredText">Welcome to the Official Website of True Blue</h1>
-	<a style="color:white" href="about page.html">About</a>
-	<a style="color:white" href="chant page.html">Chants</a>
-	<a style="color:white" href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a>
+	<div style="text-align:center;">
+		<img src="http://i.imgur.com/E2Tue4o.jpg" alt="True Blue" width="30%" height="30%">
+	</div>
+	
+	<h1 style="color:white" class="centeredText">Be Loud! Be Proud! Be True Blue!</h1>
 	
 	<br><br>
 
 	<a href="https://twitter.com/UBTrueBlue">
-		<img src="http://i.imgur.com/LyNLaHG.png" alt="Twitter Icon" width="60" height="50" class="twitter" padding-left="100">
+		<img src="http://i.imgur.com/LyNLaHG.png" alt="Twitter Icon" width="10%" height="8.4%" class="twitter" padding-left="100">
 	</a>
 	<a href="https://www.instagram.com/ubtrueblue/">
-		<img src="http://i.imgur.com/jYrbVjW.png" alt="Instagram Icon" width="64" height="64" class="social">
+		<img src="http://i.imgur.com/jYrbVjW.png" alt="Instagram Icon" width="10%" height="10%" class="social">
 	</a>
 	<a href="https://www.facebook.com/ubtrueblue/?fref=ts">
-		<img src="http://i.imgur.com/QaFU0Qg.png" alt="Facebook Icon" width="64" height="64" class="social">
+		<img src="http://i.imgur.com/QaFU0Qg.png" alt="Facebook Icon" width="10%" height="10%" class="social">
 	</a>
 	<a href="https://www.snapchat.com/add/ubtrueblue">
-		<img src="http://i.imgur.com/mlosDCS.png" alt="Snapchat Icon" width="64" height="60" class="social">
+		<img src="http://i.imgur.com/mlosDCS.png" alt="Snapchat Icon" width="10%" height="10%" class="social">
 	</a>
 	
-	<br>
+	<br><br><br>
 	
-	<button type="button">Continue to Site</button>
+	<form method="get" action="about page.html" style="text-align:center;">
+		<button type="submit" class="button">Continue to Site >></button>
+	</form>
+
 	</body>
 </html>
