--- a/about page.html
+++ b/about page.html
@@ -38,6 +38,44 @@
 		tr:nth-child(odd) td { background: #FEFEFE; }  
 
 		tr td:hover { background: #666; color: #FFF; }
+		
+		/*NAVIGATION BAR STUFF */
+.nav-bar a {
+	color:#0000fe;
+	font-size:1em;
+	display: block;
+	height: 30px;
+	width: 125px;
+	padding-top:12px;
+	padding-bottom:12px;
+	text-align:center;
+}
+
+.nav-bar a:hover {
+	color:#0000fe;
+}
+
+ul {
+	list-style-type:none;
+	margin:10px 0 0 0;
+}
+
+li {
+	list-style-type:none;	
+}
+
+.nav-bar li {
+	margin:auto;
+	/*padding:12px 2% 12px 2%;*/
+	background-color:white;
+	float:left;
+	position:relative;
+	list-style-type:none;
+}
+
+.nav-bar li:hover {
+	background-color:white
+}
 	</style>
 	
 	</head>
@@ -46,8 +84,16 @@
 	<a href="home page.html">
 		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
 	</a>
-	<h1 style="color:white"> About True Blue </h1>
-	<p style="color:white"> True Blue is the student section at all University at Buffalo athletics events and we are the largest student run club on campus. </p><br>
+	<div id="nav-container" class="nav-bar">
+		<li> <a href="events page.html">Events & Announcements</a> </li>
+		<li> <a href="chant page.html">Chants</a> </li>
+		<li> <a href="about page.html">About</a> </li>
+		<li> <a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a> </li>
+	</div>
+	
+	<br><br><br>
+	<h1 style="text-align:center; color:white"> About True Blue </h1>
+	<p style="text-align:center; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p><br>
 
 	<table style="color:white" border="1px">
 		<tr>
