--- a/home page.html
+++ b/home page.html
@@ -5,7 +5,7 @@
 	
 	<head>
 		<title> True Blue </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
 		
 		<style>
 			.social {
@@ -41,24 +41,24 @@
 	
 	<body>
 	<div style="text-align:center;">
-		<img src="http://i.imgur.com/E2Tue4o.jpg" alt="True Blue" width="30%" height="30%">
+		<img src="images\True Blue Logo.jpg" alt="True Blue" width="30%" height="30%">
 	</div>
 	
-	<h1 style="color:white" class="centeredText">Be Loud! Be Proud! Be True Blue!</h1>
+	<h1 style="color:white; font-family:Tahoma, Geneva, sans-serif;" class="centeredText">Be Loud! Be Proud! Be True Blue!</h1>
 	
 	<br><br>
 
 	<a href="https://twitter.com/UBTrueBlue">
-		<img src="http://i.imgur.com/LyNLaHG.png" alt="Twitter Icon" width="10%" height="8.4%" class="twitter" padding-left="100">
+		<img src="images\Twitter.png" alt="Twitter Icon" width="10%" height="8.4%" class="twitter" padding-left="100">
 	</a>
 	<a href="https://www.instagram.com/ubtrueblue/">
-		<img src="http://i.imgur.com/jYrbVjW.png" alt="Instagram Icon" width="10%" height="10%" class="social">
+		<img src="images\Instagram.png" alt="Instagram Icon" width="10%" height="10%" class="social">
 	</a>
 	<a href="https://www.facebook.com/ubtrueblue/?fref=ts">
-		<img src="http://i.imgur.com/QaFU0Qg.png" alt="Facebook Icon" width="10%" height="10%" class="social">
+		<img src="images\Facebook.png" alt="Facebook Icon" width="10%" height="10%" class="social">
 	</a>
 	<a href="https://www.snapchat.com/add/ubtrueblue">
-		<img src="http://i.imgur.com/mlosDCS.png" alt="Snapchat Icon" width="10%" height="10%" class="social">
+		<img src="images\Snapchat.png" alt="Snapchat Icon" width="10%" height="10%" class="social">
 	</a>
 	
 	<br><br><br>
