--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<head>
 		<title> Welcome </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
 		
 		<style>
 			.centeredText{
@@ -34,7 +34,7 @@
 	
 	<body>
 	<div style="text-align:center;">
-		<img src="http://i.imgur.com/E2Tue4o.jpg" alt="True Blue" width="30%" height="30%">
+		<img src="images\True Blue Logo.jpg" alt="True Blue" width="30%" height="30%">
 	</div>
 	
 	<br>
