--- a/about page.html
+++ b/about page.html
@@ -5,7 +5,7 @@
 	
 	<head>
 		<title> About True Blue </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
 		
 	<style>	
 		table { 
@@ -49,6 +49,7 @@
 	padding-top:12px;
 	padding-bottom:12px;
 	text-align:center;
+	font-family:Tahoma, Geneva, sans-serif;
 }
 
 .nav-bar a:hover {
@@ -71,18 +72,36 @@ li {
 	float:left;
 	position:relative;
 	list-style-type:none;
+	border-style: solid;
+	border-width:1px;
+	border-color:#0000fe;
 }
 
 .nav-bar li:hover {
 	background-color:white
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
 	</style>
-	
 	</head>
 	
 	<body>
-	<a href="home page.html">
-		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
+	<a href="index.html">
+		<img src="images\True Blue Logo.jpg" alt="True Blue Logo" width="100" height="100">
 	</a>
 	<div id="nav-container" class="nav-bar">
 		<li> <a href="events page.html">Events & Announcements</a> </li>
@@ -92,10 +111,10 @@ li {
 	</div>
 	
 	<br><br><br>
-	<h1 style="text-align:center; color:white"> About True Blue </h1>
-	<p style="text-align:center; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p><br>
+	<h1 style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> About True Blue </h1>
+	<p style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p><br>
 
-	<table style="color:white" border="1px">
+	<table style="font-family:Tahoma, Geneva, sans-serif; color:white" border="1px">
 		<tr>
 			<th>2016-2017 E-Board:</th>
 		</tr>
