--- a/chant page.html
+++ b/chant page.html
@@ -5,7 +5,7 @@
 	
 	<head>
 		<title> True Blue Chants </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="http://i.imgur.com/kIiLPI9.jpg"> <!-- sets the icon on the tab -->
+		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
 		<style>
 					/*NAVIGATION BAR STUFF */
 .nav-bar a {
@@ -17,6 +17,7 @@
 	padding-top:12px;
 	padding-bottom:12px;
 	text-align:center;
+	font-family:Tahoma, Geneva, sans-serif; 
 }
 
 .nav-bar a:hover {
@@ -39,17 +40,36 @@ li {
 	float:left;
 	position:relative;
 	list-style-type:none;
+	border-style: solid;
+	border-width:1px;
+	border-color:#0000fe;
 }
 
 .nav-bar li:hover {
 	background-color:white
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
 </style>
 	</head>
 	
 	<body>
-	<a href="home page.html">
-		<img src="http://i.imgur.com/kIiLPI9.jpg" alt="True Blue Logo" width="100" height="100">
+	<a href="index.html">
+		<img src="images\True Blue Logo.jpg" alt="True Blue Logo" width="100" height="100">
 	</a>
 	<div id="nav-container" class="nav-bar">
 		<li> <a href="events page.html">Events & Announcements</a> </li>
