Added background to text blocks

--- a/about page.html
+++ b/about page.html
@@ -112,8 +112,12 @@ a:active {
 	
 	<br><br><br>
 	<h1 style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> About True Blue </h1>
-	<p style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p><br>
-
+	<div style="background-color:white; border-radius: 5px;>
+	<p style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p>
+	</div>
+	
+	<br>
+	
 	<table style="font-family:Tahoma, Geneva, sans-serif; color:white" border="1px">
 		<tr>
 			<th>2016-2017 E-Board:</th>
