"putting a pin" in mobile/desktop website

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 	<body bgcolor="#0000fe">
 	
 	<head>
-		<title> Welcome </title> <!-- sets the title on the tab -->
+		<title> True Blue </title> <!-- sets the title on the tab -->
 		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
 		
 		<style>
+			.social {
+				padding-right: 11.6%;
+			}
+			.twitter{
+				padding-right:11.6%;
+				padding-left:11.6%;
+			}
 			.centeredText{
 				text-align:center;
 			}
@@ -37,11 +44,27 @@
 		<img src="images\True Blue Logo.jpg" alt="True Blue" width="30%" height="30%">
 	</div>
 	
-	<br>
+	<h1 style="color:white; font-family:Tahoma, Geneva, sans-serif;" class="centeredText">Be Loud! Be Proud! Be True Blue!</h1>
 	
-	<form method="get" action="home page.html" style="text-align:center;">
-		<button type="submit" class="button">Continue to Mobile Site >></button>
-		<button type="submit" class="button">Continue to Desktop Site >></button>
+	<br><br>
+
+	<a href="https://twitter.com/UBTrueBlue">
+		<img src="images\Twitter.png" alt="Twitter Icon" width="10%" height="8.4%" class="twitter" padding-left="100">
+	</a>
+	<a href="https://www.instagram.com/ubtrueblue/">
+		<img src="images\Instagram.png" alt="Instagram Icon" width="10%" height="10%" class="social">
+	</a>
+	<a href="https://www.facebook.com/ubtrueblue/?fref=ts">
+		<img src="images\Facebook.png" alt="Facebook Icon" width="10%" height="10%" class="social">
+	</a>
+	<a href="https://www.snapchat.com/add/ubtrueblue">
+		<img src="images\Snapchat.png" alt="Snapchat Icon" width="10%" height="10%" class="social">
+	</a>
+	
+	<br><br><br>
+	
+	<form method="get" action="events page.html" style="text-align:center;">
+		<button type="submit" class="button">Continue to Site >></button>
 	</form>
 
 	</body>
