About Page updates

--- a/about page.html
+++ b/about page.html
@@ -112,31 +112,70 @@ a:active {
 	
 	<br><br><br>
 	<h1 style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> About True Blue </h1>
-	<div style="background-color:white; border-radius: 5px;>
-	<p style="text-align:center; font-family:Tahoma, Geneva, sans-serif; color:white"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.<br>We get rowdy and you should too! </p>
+	<div style="background-color:white; border-radius: 5px;">
+	<p style="color:#0000fe;text-align:center; font-family:Tahoma, Geneva, sans-serif;"> True Blue is the student section for all 20 University at Buffalo varsity sports teams as well as club sports and we are the largest student run club on campus.  We get rowdy and you should too! </p>
 	</div>
 	
 	<br>
-	
-	<table style="font-family:Tahoma, Geneva, sans-serif; color:white" border="1px">
-		<tr>
-			<th>2016-2017 E-Board:</th>
-		</tr>
-		<tr>
-			<th>President</th>
-			<th>Casey Bunce</th>
-		</tr>
-		<tr>
-			<th>Vice President</th>
-			<th>Morgan O'Leary</th>
-		</tr>
-		<tr>
-			<th>Treasurer</th>
-			<th>Kyle Hughes</th>
-		</tr>
-		<tr>
-			<th>Secretary</th>
-			<th>Steph Wolcott</th>
-		</tr>
+		<div>
+			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
+				<tr>
+					<th colspan="2">2016-2017 E-Board</th>
+				</tr>
+				<tr>
+					<th>Casey Bunce</th>
+					<th>President</th>
+				</tr>
+				<tr>
+					<th>Morgan O'Leary</th>
+					<th>Vice President</th>
+				</tr>
+				<tr>
+					<th>Kyle Hughes</th>
+					<th>Treasurer</th>
+				</tr>
+				<tr>
+					<th>Steph Wolcott</th>
+					<th>Secretary</th>
+				</tr>
+			</table>
+			
+			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
+				<tr>
+					<th colspan="2">2016-2017 Chairs</th>
+				</tr>
+				<tr>
+					<th>Zach Eaton</th>
+					<th>Community Service Chair</th>
+				</tr>
+				<tr>
+					<th>Alec Ventimiglia</th>
+					<th>Social Media Head</th>
+				</tr>
+				<tr>
+					<th>Ian Mahserjian</th>
+					<th>Social Media Head</th>
+				</tr>
+				<tr>
+					<th>Matt Hansen</th>
+					<th>Chief of Student Involvement</th>
+				</tr>
+				<tr>
+					<th>Jess Saller</th>
+					<th>Chief of Student Involvement</th>
+				</tr>
+			</table>
+		</div>
+		<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
+			<tr>
+				<th>2016-2017 Board of Directors</th>
+			</tr>
+			<tr>
+				<th>Robby Johnson</th>
+			</tr>
+			<tr>
+				<th>Kevin McCormick</th>
+			</tr>
+		</table>
 	</body>	
 </html>
