--- a/about page.html
+++ b/about page.html
@@ -5,7 +5,7 @@
 	
 	<head>
 		<title> About True Blue </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
+		<link rel="icon" href="images\New White True Blue.svg"> <!-- sets the icon on the tab -->
 		
 	<style>	
 		table { 
@@ -13,7 +13,7 @@
 			font-family: Helvetica, Arial, sans-serif;
 			width: 640px; 
 			border-collapse: 
-			collapse; border-spacing: 0; 
+			collapse; border-spacing: 0;
 		}
 
 		td, th { 
@@ -23,12 +23,12 @@
 		}
 
 		th {
-			background: #DFDFDF;  /* Darken header a bit */
+			background: #FFFFFF;  /* Darken header a bit */
 			font-weight: bold;
 		}
 
 		td {
-			background: #FAFAFA;
+			background: #FFFFFF;
 			text-align: center;
 		}
 		
@@ -75,6 +75,7 @@ li {
 	border-style: solid;
 	border-width:1px;
 	border-color:#0000fe;
+	border-radius:5px;
 }
 
 .nav-bar li:hover {
@@ -101,7 +102,7 @@ a:active {
 	
 	<body>
 	<a href="index.html">
-		<img src="images\True Blue Logo.jpg" alt="True Blue Logo" width="100" height="100">
+		<img src="images\New White True Blue.svg" alt="True Blue Logo" width=300 height=102>
 	</a>
 	<div id="nav-container" class="nav-bar">
 		<li> <a href="events page.html">Events & Announcements</a> </li>
@@ -118,7 +119,7 @@ a:active {
 	
 	<br>
 		<div>
-			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
+			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe;" border="1px" align="center" border-radius="5px">
 				<tr>
 					<th colspan="2">2016-2017 E-Board</th>
 				</tr>
@@ -140,7 +141,7 @@ a:active {
 				</tr>
 			</table>
 			
-			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
+			<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe;" border="1px" align="center">
 				<tr>
 					<th colspan="2">2016-2017 Chairs</th>
 				</tr>
@@ -149,11 +150,15 @@ a:active {
 					<th>Community Service Chair</th>
 				</tr>
 				<tr>
-					<th>Alec Ventimiglia</th>
-					<th>Social Media Head</th>
+					<th>Robby Johnson</th>
+					<th>Head of Fundraising</th>
 				</tr>
 				<tr>
 					<th>Ian Mahserjian</th>
+					<th>Social Media Head</th>
+				</tr>
+				<tr>
+					<th>Alec Ventimaglia</th>
 					<th>Social Media Head</th>
 				</tr>
 				<tr>
@@ -166,16 +171,5 @@ a:active {
 				</tr>
 			</table>
 		</div>
-		<table style="font-family:Tahoma, Geneva, sans-serif; color:#0000fe; float:left;" border="1px">
-			<tr>
-				<th>2016-2017 Board of Directors</th>
-			</tr>
-			<tr>
-				<th>Robby Johnson</th>
-			</tr>
-			<tr>
-				<th>Kevin McCormick</th>
-			</tr>
-		</table>
 	</body>	
 </html>
