--- a/index.html
+++ b/index.html
@@ -1,71 +1,70 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-<html>
-	<body bgcolor="#0000fe">
-	
-	<head>
-		<title> True Blue </title> <!-- sets the title on the tab -->
-		<link rel="icon" href="images\True Blue Logo.jpg"> <!-- sets the icon on the tab -->
-		
-		<style>
-			.social {
-				padding-right: 11.6%;
-			}
-			.twitter{
-				padding-right:11.6%;
-				padding-left:11.6%;
-			}
-			.centeredText{
-				text-align:center;
-			}
-			.button {
-				background-color: #0000fe;
-				color: white;
-				padding: 16px 32px;
-				text-align: center;
-				text-decoration: none;
-				display: inline-block;
-				font-size: 16px;
-				margin: 4px 2px;
-				-webkit-transition-duration: 0.4s; /* Safari */
-				transition-duration: 0.4s;
-				cursor: pointer;
-				border: 2px solid white;
-			}
-			.button:hover {
-				background-color: white;
-				color: #0000fe;
-			}
-		</style>
-	</head>
-	
-	<body>
-	<div style="text-align:center;">
-		<img src="images\True Blue Logo.jpg" alt="True Blue" width="30%" height="30%">
-	</div>
-	
-	<h1 style="color:white; font-family:Tahoma, Geneva, sans-serif;" class="centeredText">Be Loud! Be Proud! Be True Blue!</h1>
-	
-	<br><br>
+    <title>True Blue</title>
+	<link rel="icon" href="images\New_White_True_Blue.jpg"> <!-- sets the icon on the tab -->
 
-	<a href="https://twitter.com/UBTrueBlue">
-		<img src="images\Twitter.png" alt="Twitter Icon" width="10%" height="8.4%" class="twitter" padding-left="100">
-	</a>
-	<a href="https://www.instagram.com/ubtrueblue/">
-		<img src="images\Instagram.png" alt="Instagram Icon" width="10%" height="10%" class="social">
-	</a>
-	<a href="https://www.facebook.com/ubtrueblue/?fref=ts">
-		<img src="images\Facebook.png" alt="Facebook Icon" width="10%" height="10%" class="social">
-	</a>
-	<a href="https://www.snapchat.com/add/ubtrueblue">
-		<img src="images\Snapchat.png" alt="Snapchat Icon" width="10%" height="10%" class="social">
-	</a>
-	
-	<br><br><br>
-	
-	<form method="get" action="events page.html" style="text-align:center;">
-		<button type="submit" class="button">Continue to Site >></button>
-	</form>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-	</body>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/cover.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">True Blue</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="test_events.html">Events & Announcements</a></li>
+                  <li><a href="test_chant.html">Chants</a></li>
+				  <li><a href="test_about.html">About</a></li>
+				  <li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">UB's student section and largest student-run club.</h1>
+            <p class="lead">True Blue is the life blood and energy of the University at Buffalo. Our goal is to spread school spirit and pride through fun activities, programs, and community involvement. Anyone and everyone is welcome and encouraged to join our ranks!</p>
+		  </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
