Basically Good to Go

--- a/test_about.html
+++ b/test_about.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>About True Blue</title>
+	<link rel="icon" href="images\New Blue True Blue.png"> <!-- sets the icon on the tab -->
+	<link rel="apple-touch-icon" href="images\New Blue True Blue.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +21,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/navbar-fixed-top.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/custom.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +34,7 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -39,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">True Blue</a>
+          <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -64,6 +68,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>About True Blue</h1>
+		<p>True Blue is the life blood and energy of the University at Buffalo. Our goal is to spread school spirit and pride through fun activities, programs, and community involvement. Anyone and everyone is welcome and encouraged to join our ranks!</p>
         
 		<div class="container">
 		  <h2>2016-2017 E-Board</h2>
@@ -128,7 +133,7 @@
 			  </tr>
 			  <tr>
 				<td>Social Media Head</td>
-				<td>Alec Ventimaglia</td>
+				<td>Alec Ventimiglia</td>
 				<td>alecvent (at) buffalo.edu</td>
 			  </tr>
 			  <tr>
@@ -148,7 +153,6 @@
       </div>
     </div> <!-- /container -->
 
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -157,5 +161,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+	<!-- jQuery -->
+    <script src="js/jquery.js"></script>
   </body>
 </html>
