--- a/test_chant.html
+++ b/test_chant.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Chants</title>
+	<link rel="icon" href="images\New Blue True Blue.png"> <!-- sets the icon on the tab -->
+	<link rel="apple-touch-icon" href="images\New Blue True Blue.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/navbar-fixed-top.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/custom.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +33,7 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -39,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">True Blue</a>
+          <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -57,6 +60,7 @@
           </ul>
         </div><!--/.nav-collapse -->
       </div>
+    </nav>
     </nav>
 
     <div class="container">
@@ -177,5 +181,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<!-- jQuery -->
+    <script src="js/jquery.js"></script>
   </body>
 </html>
