--- a/test_events.html
+++ b/test_events.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Events & Announcements</title>
+	<link rel="icon" href="images\New Blue True Blue.png"> <!-- sets the icon on the tab -->
+	<link rel="apple-touch-icon" href="images\New Blue True Blue.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +31,6 @@
   </head>
 
   <body>
-
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
       <div class="container">
@@ -40,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <img src="images\New White True Blue.svg" alt="True Blue Logo">
+		  <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -50,7 +51,7 @@
 			<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#" style="color: white">2016-2017</a></li>
+                <li><a href="#">2016-2017</a></li>
                 <li><a href="#">2015-2016</a></li>
               </ul>
             </li>
@@ -86,5 +87,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+	<!-- jQuery -->
+    <script src="js/jquery.js"></script>
   </body>
 </html>
