--- a/index.html
+++ b/index.html
@@ -1,70 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>True Blue</title>
-	<link rel="icon" href="images\New_White_True_Blue.jpg"> <!-- sets the icon on the tab -->
+	<link rel="icon" href="images\New Blue True Blue.png"> <!-- sets the icon on the tab -->
+	<link rel="apple-touch-icon" href="images\New Blue True Blue.png">
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/custom.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
 
-  <body>
-    <div class="site-wrapper">
+</head>
 
-      <div class="site-wrapper-inner">
+<body>
 
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">True Blue</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="test_events.html">Events & Announcements</a></li>
-                  <li><a href="test_chant.html">Chants</a></li>
-				  <li><a href="test_about.html">About</a></li>
-				  <li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
-                </ul>
-              </nav>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+				<a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
             </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">UB's student section and largest student-run club.</h1>
-            <p class="lead">True Blue is the life blood and energy of the University at Buffalo. Our goal is to spread school spirit and pride through fun activities, programs, and community involvement. Anyone and everyone is welcome and encouraged to join our ranks!</p>
-		  </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="test_events.html">Events & Announcements</a></li>
+                    <li><a href="test_chant.html">Chants</a></li>
+                    <li><a href="test_about.html">About</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">2016-2017</a></li>
+							<li><a href="#">2015-2016</a></li>
+						</ul>
+					</li>
+					<li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-      </div>
-    </div>
+        <!-- /.container -->
+    </nav>
 
-    <!-- Bootstrap core JavaScript
+    <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1 style="text-outline: 2px 2px #0059b7">True Blue</h1>
+                        <h3 style="text-outline: 2px 2px #0059b7">UB's Student Section</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="https://deeplink.me/twitter.com/UBTrueBlue" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            </li>
+                            <li>
+                                <a href="https://deeplink.me/www.instagram.com/ubtrueblue" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                            </li>
+							<li>
+                                <a href="https://deeplink.me/www.facebook.com/ubtrueblue/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                            </li>
+							<li>
+                                <a href="https://deeplink.me/www.snapchat.com/add/ubtrueblue" class="btn btn-default btn-lg"><!--<i class="fa fa-snapchat-ghost" aria-hidden="true"></i> --><span class="network-name">Snapchat</span></a>
+                            </li>
+							<li>
+                                <a href="https://deeplink.me/www.youtube.com/user/TrueBlueUBathletics" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.intro-header -->
+	
+	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+</body>
 </html>
