Controlling Latest for Turn Over

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                     <li><a href="test_events.html">Events & Announcements</a></li>
                     <li><a href="test_chant.html">Chants</a></li>
                     <li><a href="test_about.html">About</a></li>
-					<li class="dropdown">
+					<!--<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">2016-2017</a></li>
 							<li><a href="#">2015-2016</a></li>
 						</ul>
-					</li>
+					</li>-->
 					<li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
                                 <a href="https://deeplink.me/www.facebook.com/ubtrueblue/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
 							<li>
-                                <a href="https://deeplink.me/www.snapchat.com/add/ubtrueblue" class="btn btn-default btn-lg"><!--<i class="fa fa-snapchat-ghost" aria-hidden="true"></i> --><span class="network-name">Snapchat</span></a>
+                                <a href="https://deeplink.me/www.snapchat.com/add/ubtrueblue" class="btn btn-default btn-lg"><i class="fa fa-snapchat-ghost" aria-hidden="true"></i> <span class="network-name">Snapchat</span></a>
                             </li>
 							<li>
                                 <a href="https://deeplink.me/www.youtube.com/user/TrueBlueUBathletics" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
