--- a/test_about.html
+++ b/test_about.html
@@ -45,18 +45,18 @@
           </button>
           <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
 			<li><a href="test_events.html">Events & Announcements</a></li>
 			<li><a href="test_chant.html">Chants</a></li>
             <li><a href="test_about.html">About</a></li>
-			<li class="dropdown">
+			<!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">2016-2017</a></li>
                 <li><a href="#">2015-2016</a></li>
               </ul>
-            </li>
+            </li>-->
             <li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -71,7 +71,7 @@
 		<p>True Blue is the life blood and energy of the University at Buffalo. Our goal is to spread school spirit and pride through fun activities, programs, and community involvement. Anyone and everyone is welcome and encouraged to join our ranks!</p>
         
 		<div class="container">
-		  <h2>2016-2017 E-Board</h2>
+		  <h2>2017-2018 E-Board</h2>
 		  <table class="table table-responsive">
 			<thead>
 			  <tr>
@@ -83,30 +83,30 @@
 			<tbody>
 			  <tr>
 				<td>President</td>
-				<td>Casey Bunce</td>
-				<td>caseybun (at) buffalo.edu</td>
+				<td>Steph Wolcott</td>
+				<td>snwolcot (at) buffalo.edu</td>
 			  </tr>
 			  <tr>
 				<td>Vice President</td>
-				<td>Morgan O'Leary</td>
-				<td>morganol (at) buffalo.edu</td>
-			  </tr>
-			  <tr>
-				<td>Treasurer</td>
 				<td>Kyle Hughes</td>
 				<td>kylehugh (at) buffalo.edu</td>
 			  </tr>
 			  <tr>
+				<td>Treasurer</td>
+				<td>Kevin McCormick</td>
+				<td>kpmccorm (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
 				<td>Secretary</td>
-				<td>Steph Wolcott</td>
-				<td>snwolcot (at) buffalo.edu</td>
+				<td>Zach Eaton</td>
+				<td>zceaton (at) buffalo.edu</td>
 			  </tr>
 			</tbody>
 		  </table>
 		</div>
 		
-				<div class="container">
-		  <h2>2016-2017 Board of Directors</h2>
+		<div class="container">
+		  <h2>2017-2018 Board of Directors</h2>
 		  <table class="table table-responsive">
 			<thead>
 			  <tr>
@@ -117,34 +117,54 @@
 			</thead>
 			<tbody>
 			  <tr>
+				<td>General Body Chair</td>
+				<td>Kelsey Cadwallader</td>
+				<td>klcadwal (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>General Body Chair</td>
+				<td>Kyle Yagielski</td>
+				<td>kyleyagi (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Community Outreach Chair</td>
+				<td>Steph Gavin</td>
+				<td>smgavin (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Community Outreach Chair</td>
+				<td>Matthew Helou</td>
+				<td>mhelou (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Community Outreach Chair</td>
+				<td>Gabby Jerzak</td>
+				<td>gljerzak (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Olympic Sports Chair</td>
+				<td>Josh Deveso</td>
+				<td>jadeveso (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Olympic Sports Chair</td>
+				<td>Vishav Dubb</td>
+				<td>vishavdu (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
+				<td>Olympic Sports Chair</td>
+				<td>Brian Hebbard</td>
+				<td>blhebbar (at) buffalo.edu</td>
+			  </tr>
+			  <tr>
 				<td>Community Service Chair</td>
-				<td>Zach Eaton</td>
-				<td>zceaton (at) buffalo.edu</td>
+				<td>Daniel Nicholson</td>
+				<td>dpnichol (at) buffalo.edu</td>
 			  </tr>
 			  <tr>
 				<td>Fundraising Chair</td>
-				<td>Robby Johnson</td>
-				<td>robbyjoh (at) buffalo.edu</td>
-			  </tr>
-			  <tr>
-				<td>Social Media Head</td>
-				<td>Ian Mahserjian</td>
-				<td>ianmahse (at) buffalo.edu</td>
-			  </tr>
-			  <tr>
-				<td>Social Media Head</td>
-				<td>Alec Ventimiglia</td>
-				<td>alecvent (at) buffalo.edu</td>
-			  </tr>
-			  <tr>
-				<td>Student Involvement Chair</td>
 				<td>Matt Hansen</td>
 				<td>mthansen (at) buffalo.edu</td>
-			  </tr>
-			  <tr>
-				<td>Student Involvement Chair</td>
-				<td>Jess Saller</td>
-				<td>jsaller (at) buffalo.edu</td>
 			  </tr>
 			</tbody>
 		  </table>
