--- a/test_chant.html
+++ b/test_chant.html
@@ -44,18 +44,18 @@
           </button>
           <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
 			<li><a href="test_events.html">Events & Announcements</a></li>
 			<li><a href="test_chant.html">Chants</a></li>
             <li><a href="test_about.html">About</a></li>
-			<li class="dropdown">
+			<!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">2016-2017</a></li>
                 <li><a href="#">2015-2016</a></li>
               </ul>
-            </li>
+            </li>-->
             <li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -117,18 +117,6 @@
 					<div class="list-group collapse" id="item-1-7">
 						<a href="#" class="list-group-item">B-U! <br/> *clap, clap* <br/> F-F! <br/> *clap, clap* <br/> A-L! <br/> *clap, clap* <br/> O-GO!</a>
 					</div>
-					<a href="#item-1-8" class="list-group-item" data-toggle="collapse">
-						<i class="glyphicon glyphicon-chevron-right"></i>Give Me That Beat One Time
-					</a>
-					<div class="list-group collapse" id="item-1-8">
-						<a href="#" class="list-group-item">(Follow True Blue leader) <br/> *stomp once* <br/> *stomp twice* <br/> *Replicate True Blue Leader as he/she does the Stomp the Yard beat*</a>
-					</div>
-					<a href="#item-1-9" class="list-group-item" data-toggle="collapse">
-						<i class="glyphicon glyphicon-chevron-right"></i>Together We Stand
-					</a>
-					<div class="list-group collapse" id="item-1-9">
-						<a href="#" class="list-group-item">(Follow True Blue Leader) <br/> “Together We Stand” <br/> “Divided We Fall” <br/> “ALL FOR ONE” <br/> “ONE FOR ALL” <br/> “Came to fight” <br/> “’TIL WE CANT FIGHT NO’MORE” <br/> “GET UP FIGHT SOME MORE”(2x) (Jumping up & Down) <br/> “GO UB” (4x) <br/> “Aahhhhhh Woooo”(1x) (Everyone applaud)</a>
-					</div>
 					<a href="#item-1-10" class="list-group-item" data-toggle="collapse">
 						<i class="glyphicon glyphicon-chevron-right"></i>I Believe (at the end of a win)
 					</a>
@@ -153,12 +141,6 @@
 				<i class="glyphicon glyphicon-chevron-right"></i>School Specific
 			  </a>
 				<div class="list-group collapse" id="item-4">
-					<a href="#item-4-1" class="list-group-item" data-toggle="collapse">
-						<i class="glyphicon glyphicon-chevron-right"></i>Akron
-					</a>
-					<div class="list-group collapse" id="item-4-1">
-						<a href="#" class="list-group-item"><b>The Akron Family</b> <br/>(Sung to the tune of the Addam’s Family) <br/> Your father is your brother <br/> Your sister is your mother <br/> You like to touch each other <br/> The Akron family <br/> Da-da-da-da <br/> *clap, clap* <br/> Da-da-da-da <br/> *clap, clap* <br/> Da-da-da-da, da-da-da-da, da-da-da-da <br/> *clap, clap* <br/> (Repeat x2)</a>
-					</div>
 					<a href="#item-4-2" class="list-group-item" data-toggle="collapse">
 						<i class="glyphicon glyphicon-chevron-right"></i>Kent State
 					</a>
