--- a/test_events.html
+++ b/test_events.html
@@ -12,14 +12,8 @@
     <title>Events & Announcements</title>
 	<link rel="icon" href="images\New Blue True Blue.png"> <!-- sets the icon on the tab -->
 	<link rel="apple-touch-icon" href="images\New Blue True Blue.png">
-
-    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="css/navbar-fixed-top.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/custom.css">
 
@@ -43,18 +37,18 @@
           </button>
 		  <a href="index.html" class="navbar-left navbar-left-custom"><img style="height: 45px" align="middle" src="images\New White True Blue.png"> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
 			<li><a href="test_events.html">Events & Announcements</a></li>
 			<li><a href="test_chant.html">Chants</a></li>
             <li><a href="test_about.html">About</a></li>
-			<li class="dropdown">
+			<!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">History <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">2016-2017</a></li>
                 <li><a href="#">2015-2016</a></li>
               </ul>
-            </li>
+            </li>-->
             <li><a href="http://goo.gl/forms/jgwWRf0cfn">Sign-up for Updates</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -62,12 +56,10 @@
     </nav>
 
     <div class="container">
-
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Events This Week</h1>
-        <p>-Various Events</p>
-        <p>-Other Stuff</p>
+        <p></p>
         <p class="hidden-xs responsive-iframe-container">
 			<iframe src="https://calendar.google.com/calendar/b/1/embed?showPrint=0&amp;mode=MONTH&amp;height=600&amp;wkst=1&amp;src=buffalo.edu_5svqr2vv2givdi648f68884nv8@group.calendar.google.com&ctz=America/New_York"
 			style="border-width:0; border-radius: 5px;" width="575" height="575" frameborder="0" scrolling="no"></iframe>
